fix button alignment bug

--- a/app/styles/app/components/loading-indicator.sass
+++ b/app/styles/app/components/loading-indicator.sass
@@ -33,3 +33,8 @@
   @extend .loading-indicator
   i
     background-color: $white
+
+.icon-height
+  .loading-indicator
+    height: 28px
+    margin-bottom: .5em
