--- a/app/styles/app/layouts/buildheader.sass
+++ b/app/styles/app/layouts/buildheader.sass
@@ -129,12 +129,12 @@
     &:hover
       background-color: darken($grey-medium, 10)
   .icon--trigger
-    width: .95em
-    height: 1.3em
+    width: 15px
+    height: 19px
     margin-left: 6px
   .icon--cancel
-    width: 1em
-    height: 1em
+    width: 16px
+    height: 16px
     margin-left: 6px
   .icon--codeclimate
     width: 1.2em
