--- a/app/styles/app/modules/flash.sass
+++ b/app/styles/app/modules/flash.sass
@@ -2,6 +2,7 @@
   @include resetul
   font-size: 18px
   text-align: center
+  height: 0
   li
     top: 0
     position: relative
@@ -22,7 +23,7 @@
     height: 1.1rem
 
   p
-    padding: .7em 0
+    padding: .4em 0
     margin: 0
 
   li.broadcast p
